--- a/002_TA.ipynb
+++ b/002_TA.ipynb
@@ -471,9 +471,9 @@
     }
    ],
    "source": [
-    "strategy = [1,1,1]  # 1 MACD, 1 SMA, 1 RSI\n",
+    "strategy = [0,1,1]  # 1 MACD, 1 SMA, 1 RSI\n",
     "signal_type =  \"SELL\" \n",
-    "sma_args = [10, 20, 50]  # Long and Short SMA periods\n",
+    "sma_args = [ 10, 14]  # Long and Short SMA periods\n",
     "rsi_args = [14, 21, 28]  # RSI period\n",
     "\n",
     "result_df = gen_signals(strategy, signal_type, *sma_args, *rsi_args) \n",
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 44,
    "id": "0f800bab",
    "metadata": {
     "scrolled": true
@@ -528,6 +528,8 @@
     "positions = []\n",
     "operations = []\n",
     "trading_data = train_d\n",
+    "sma_period = 10\n",
+    "rsi_period = 14\n",
     "\n",
     "class Backtesting:\n",
     "    def __init__(self, trading_data, comission, stop_loss, take_profit):\n",
@@ -535,6 +537,8 @@
     "        self.comission = comission\n",
     "        self.stop_loss = stop_loss\n",
     "        self.take_profit = take_profit\n",
+    "        self.sma_period = sma_period  \n",
+    "        self.rsi_period = rsi_period \n",
     "        self.cash = 1000000  # Initial cash balance\n",
     "        self.positions = []\n",
     "\n",
